--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -24,5 +24,6 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.5.3'
+      - run: flutter clean
       - run: flutter pub get
       - run: flutter build apk
