--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
+
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ci_cd_app">
+          package="com.example.ci_cd_app"
+          android:versionCode="1.0.0"
+          android:versionName="1.0.0">
    <application
         android:label="ci_cd_app"
         android:name="${applicationName}"
@@ -36,3 +40,5 @@
         android:value="26.1.0" />
     </application>
 </manifest>
+
+
